crates/server/tests/snapshots/regression_tests__downloading_expired_file.snap
---
source: crates/server/tests/regression_tests.rs
expression: sanitise_snapshot(download)
---
<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="description" content="Download page for a file named hello.txt.">
  <meta name="author" content="testuser">
  <meta name="keywords" content="download, file, send, share, cli, curl, wget">

  <meta name="darkreader-lock">

  <meta name="robots" content="noindex, nofollow" />

  <meta property="og:title" content="hello.txt Download">
  <meta property="og:description" content="Download page for hello.txt.">
  <meta property="og:image" content="http://127.0.0.1:3000//favicon-192x192.png">
  <meta property="og:url" content="http://127.0.0.1:3000/DOWNLOAD_ID/file">
  <meta property="og:type" content="website">

  <title>hello.txt</title>

  <link rel="icon shortcut" href="/favicon.ico" type="image/x-icon">
  <link rel="icon" href="/favicon.ico" sizes="16x16" type="image/x-icon">
  <link rel="icon" href="/favicon-32x32.png" sizes="32x32" type="image/png">
  <link rel="icon" href="/favicon-96x96.png" sizes="96x96" type="image/png">
  <link rel="icon" href="/favicon-192x192.png" sizes="192x192" type="image/png">
  <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">

  <link rel="stylesheet" href="/styles.css">
</head>
<body data-theme="light">
  <button class="theme-toggle" onclick="toggleTheme()">Light Mode</button>

  <div class="main-content">
    <div class="container">
      <h1>Download File</h1>
      <div class="file-info">
        <p><strong>File Name:</strong> hello.txt</p>
        <p><strong>Uploaded By:</strong> <a href="https://www.github.com/josiahbull">testuser</a></p>
        <p><strong>Uploaded:</strong> <span class="uploadedAt">1_000_000_000</span></p>
        <p><strong>Expires: </strong> <span class="expiresAt">1_000_000_000</span></p>
        <p><strong>File Size:</strong> 17</p>
      </div>
      <a href="http://127.0.0.1:3000/DOWNLOAD_ID/file" class="button" download="hello.txt">Download via Browser</a>
      <div class="cli-instructions">
        <p><strong>Download via CLI:</strong></p>
        <div class="cli-command">
            <span class="code">curl -o hello.txt http://127.0.0.1:3000/DOWNLOAD_ID/file</span>
          <svg class="copy-icon" onclick="copyCommand('curl -o hello.txt http://127.0.0.1:3000/DOWNLOAD_ID/file')" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
            <path d="M19 3h-8c-1.1 0-2 .9-2 2v2H5c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2v-2h4c-1.1 0-2-.9 2-2V5c0-1.1-.9-2-2-2zm-6 14H5V9h8v8zm6-4h-4V5h4v8z"/>
          </svg>
        </div>
        <div class="cli-command">
            <span class="code">wget -O hello.txt http://127.0.0.1:3000/DOWNLOAD_ID/file</span>
          <svg class="copy-icon" onclick="copyCommand('wget -O hello.txt http://127.0.0.1:3000/DOWNLOAD_ID/file')" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
            <path d="M19 3h-8c-1.1 0-2 .9-2 2v2H5c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2v-2h4c-1.1 0-2-.9 2-2V5c0-1.1-.9-2-2-2zm-6 14H5V9h8v8zm6-4h-4V5h4v8z"/>
          </svg>
        </div>
      </div>
      <div class="upload-cta">
        <p>Want to upload a file? <a href="/">Click here to upload</a>.</p>
      </div>
    </div>
  </div>
  <div class="social-links">
    <a href="https://www.linkedin.com/in/josiah-bull">
      <img src="https://cdn.jsdelivr.net/npm/simple-icons/icons/linkedin.svg" alt="LinkedIn">
      LinkedIn
    </a>
    <a href="https://github.com/josiahbull/send">
      <img src="https://cdn.jsdelivr.net/npm/simple-icons/icons/github.svg" alt="GitHub">
      GitHub
    </a>
  </div>

  <div id="toast" class="toast"></div>

  <script>
    const uploadedAt = new Date(uploadedAtUtc);
    const expiresAt = new Date(expiresAtUtc);

    const uploadedAtElement = document.querySelector('.uploadedAt');
    const expiresAtElement = document.querySelector('.expiresAt');

    //
  </script>

  <!-- JavaScript for handling theme changes/toggles -->
  <script>
    const themeToggle = document.querySelector('.theme-toggle');
    const root = document.documentElement;

    const themes = ['light', 'dark', 'auto'];
    let currentTheme = localStorage.getItem('theme') || 'auto';

    function setTheme(theme) {
      if (theme === 'auto') {
        const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
        theme = prefersDark ? 'dark' : 'light';
      }
      document.body.setAttribute('data-theme', theme);
      themeToggle.textContent = `${capitalize(currentTheme)} Mode`;
      localStorage.setItem('theme', currentTheme);
    }

    function toggleTheme() {
      const currentIndex = themes.indexOf(currentTheme);
      currentTheme = themes[(currentIndex + 1) % themes.length];
      setTheme(currentTheme);
    }

    function capitalize(word) {
      return word.charAt(0).toUpperCase() + word.slice(1);
    }

    // Apply theme on page load
    setTheme(currentTheme);

    // Update theme if system setting changes and in Auto Mode
    window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', () => {
      if (currentTheme === 'auto') setTheme('auto');
    });
  </script>

  <!-- JavaScript for handling toast notification and copying command -->
  <script>
    function copyCommand(command) {
      navigator.clipboard.writeText(command).then(() => {
        showToast(`Command copied: ${command}`);
      }).catch(err => {
        showToast(`Failed to copy: ${err}`);
      });
    }

    function showToast(message) {
      const toast = document.getElementById('toast');
      toast.textContent = message;
      toast.classList.add('show');
      setTimeout(() => {
        toast.classList.remove('show');
      }, 3000);
    }
  </script>
</body>
</html>
