crates/server/tests/snapshots/regression_tests__downloading_non_existent_file.snap
---
source: crates/server/tests/regression_tests.rs
expression: body
---
Invalid URL: Invalid check bit
