crates/server/tests/snapshots/regression_tests__setting_expiry_too_high_fails.snap
---
source: crates/server/tests/regression_tests.rs
expression: body
---
Expiry must be between 5s and 86400s
