crates/server/tests/snapshots/regression_tests__that_large_files_get_rejected.snap
---
source: crates/server/tests/regression_tests.rs
expression: response.text().await.unwrap()
---
File too big
