crates/server/tests/snapshots/regression_tests__that_many_files_cannot_exceed_max_size.snap
---
source: crates/server/tests/regression_tests.rs
expression: body
snapshot_kind: text
---
File too big
